Fixed pagination issue and aligned buttons

--- a/app/css/crewControlPanel.css
+++ b/app/css/crewControlPanel.css
@@ -65,5 +65,9 @@
   font-size: 20px;
 }
 
+#airportsButton
+{
+	padding-left: 2px;
+}
 
 
